--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <header>
 
-    <div id="menu-bar" class="fas fa-bars"></div>
+    <div id="menu-bar" class="fa fa-bars"></div>
 
-    <a href="#" class="logo"><span>T</span>ravel</a>
+    <a href="#" class="logo"><span>D</span>ream <span>H</span>olidays</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
